# HH_project5

./: .coverage  .gitignore  LICENSE  README.md  pyproject.toml
project_folder/: main.py
project_folder/data/: vacancies.json
project_folder/src/: DBCreate_module.py  DBManager_module.py  api_class_module.py  files_class_module.py  utils.py  vacancy_class.py
project_folder/tests/: conftest.py  test_api_module.py  test_files_class.py  test_vacancy_class.py
