[tool.poetry]
name = "hh-project5"
version = "0.1.0"
description = ""
authors = ["rafaelmanasyan <workpageraf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.2"
pytest = "^8.3.3"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
